2007-10-03  Eric B. Weddington  <eweddington@cso.atmel.com>

	The start of a Fuse API.
	* include/avr/fuse.h: New file.
	* include/avr/io.h: Add inclusion of fuse.h.
	* include/avr/Makefile.am: Add fuse.h to distribution list.
	* include/avr/iom128.h: Add fuse information to ATmega128 IO header.

2007-10-03  Eric B. Weddington  <eweddington@cso.atmel.com>

	* doc/api/main_page.dox: Reorganize and update device listing.
	Fix spelling and grammar.

2007-10-02  Eric B. Weddington  <eweddington@cso.atmel.com>

	* doc/api/pgmspace.dox: Fix example code. Change description to match.
	* NEWS: Update fixed bugs list.
	Fixes bug #21183.

2007-10-01  Eric B. Weddington  <eweddington@cso.atmel.com>

	Add new devices: AT90PWM216, AT90PWM316, with contributions from 
	Tobias Frost <tobi@coldtobi.de>.
	* devtools/gen-avr-lib-tree.sh: Add new devices.
	* configure.ac: ditto.
	* doc/api/using-tools.dox: ditto.
	* include/avr/Makefile.am: ditto.
	* include/avr/power.h: ditto.
	* include/avr/wdt.h: ditto.
	* include/avr/io.h: ditto.
	* include/avr/io90pwm216.h: New file.
	* include/avr/io90pwm316.h: New file.
	* NEWS: Update new devices list.

2007-07-30  Eric B. Weddington  <eweddington@cso.atmel.com>

	*include/avr/Makefile.am: Add missing common.h to install list.

2007-07-09  Eric B. Weddington  <eweddington@cso.atmel.com>

	* doc/api/inline_asm.dox: Document new constraints.

2007-07-06 Eric B. Weddington <eweddington@cso.atmel.com>

	* doc/api/faq.dox: Add FAQ for soft reset.

2007-07-01  Dmitry Xmelkov  <dmix@gmail.ru>

	Add new function alloca(). Fix savannah bug #19686: alloca
	declaration missing.
	* include/alloca.h: New file.
	* include/Makefile.am: Add alloca.h file.
	* doc/api/doxygen.config.in: Add alloca.h file.
	* tests/simulate/other: New directory.
	* tests/simulate/other/alloc.c: New file.
	* tests/simulate/runtest.sh: Add other directory to the test list.

2007-06-27 Eric B. Weddington <eweddington@cso.atmel.com>
